snapshot section added

--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -9,6 +9,7 @@ body {
     overflow-x: hidden; 
     font-family: 'Work Sans' !important;
     width: 100%;
+    max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
