--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -24,7 +24,13 @@
     outline: none !important;
 }
 
+.custom-width {
+    max-width: 1192px;
+}
 
+.custom-width-full {
+    width: 100% !important;
+}
 
 .lesson-info-blurb {
     width: 1192px;
@@ -46,3 +52,22 @@ font-size: 20px !important;
     font-size: 14px !important;
     text-transform: uppercase;
 }
+
+.coach-blurb {
+    color: #fff;
+    background-color: rgba(255,255,255,0.15);
+    border: 0px solid transparent;
+    border-radius: 6px;
+}
+
+.coach-blurb-img {
+    width: 87px;
+    height: auto;
+}
+
+.coach-blurb-desc .title {
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 16px;
+}
+
