--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -11,3 +11,14 @@
     font-size: 12px;
     text-align: center;
 }
+
+.links ul li a {
+    color: #191B34;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0;
+}
+
+.links ul li a:hover { 
+    text-decoration: none;
+}
