--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -71,3 +71,14 @@ font-size: 20px !important;
     font-size: 16px;
 }
 
+.toggle-arrow {
+    position: absolute;
+    float: right;
+    margin-left: 134px !important;
+}
+
+.info-heading button [aria-expanded="true"] {
+    .toggle-arrow {
+        transform: rotate(180deg);
+    }
+}
