--- a/src/components/PurchaseLessons/PurchaseLessons.scss
+++ b/src/components/PurchaseLessons/PurchaseLessons.scss
@@ -9,7 +9,7 @@
 }
 
 .snapshot-card-title {
-        font-size: 16px;
+        font-size: 16px !important;
         text-decoration: underline;
 }
 
