--- a/src/components/CTABanner/CTABanner.scss
+++ b/src/components/CTABanner/CTABanner.scss
@@ -1,5 +1,5 @@
 .cta-banner-container {
-    width: 114vw !important;
+    width: 100% !important;
     min-width: 100%;
     max-width: 100%;
     background-image: url("../../assets/images/home_ready_to_go_image.png");
