--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,3 @@
-.navbar-main{
-    //height: auto !important;
-}
-
 .nav-link {
     color: #141630 !important;
     width: max-content;
@@ -13,8 +9,7 @@
     background-color: black;
     background-image: linear-gradient(to right, #141630 , #1F2350);
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    max-width: 100% !important;
     margin-right: auto;
     margin-left: auto;
 }
