--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,8 +1,14 @@
 .card-color {
     color: #fff;
-    background-color: rgba(255,255,255,0.15);
-    border: 0px solid transparent;
-    border-radius: 6px;
+    background-color: rgba(255,255,255,0.15) !important;
+    border: 0px solid transparent !important;
+    border-radius: 6px !important;
+    
+}
+
+.video-react .video-react-video {
+    border-top-left-radius: 6px !important;
+    border-top-right-radius: 6px !important;
 }
 
 .info-heading button{
@@ -25,7 +31,7 @@
 }
 
 .custom-width {
-    max-width: 1192px;
+    max-width: 1192px !important;
 }
 
 .custom-width-full {
@@ -33,14 +39,14 @@
 }
 
 .lesson-info-blurb {
-    width: 1192px;
+    width: 1192px !important;
     border-top: 1px solid rgba(255, 255, 255, 0.4);
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .info-blurb-img {
-    width: 157px;
-    height: 157px;
+    width: 157px !important;
+    height: auto !important;
 }
 
 .h4or5 {
@@ -71,14 +77,47 @@ font-size: 20px !important;
     font-size: 16px;
 }
 
-.toggle-arrow {
-    position: absolute;
-    float: right;
-    margin-left: 134px !important;
+.accordion {
+    background-color: #fff !important;
+    border-radius: 6px !important;
 }
 
-.info-heading button [aria-expanded="true"] {
-    .toggle-arrow {
-        transform: rotate(180deg);
-    }
+.accordion-body {
+    padding: 0px !important;
+    font-size: 14px !important;
+}
+
+.accordion-button {
+    height: 80px !important;
+    text-align: left !important;
+}
+
+.accordion-item {
+    background-color: #fff;
+    border: 1px solid rgba(20, 22, 48, 0.4) !important;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #141630 !important;
+    background-color: transparent !important;
+    box-shadow: none !important;
+}
+
+.accordion-button:focus {
+    z-index: 3;
+    border-color: transparent !important;
+    outline: 0;
+    box-shadow: none !important;
+}
+
+.accordion-button::after {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: "";
+    background-image: url("../assets/icons/class_details_arrow_up copy.svg") !important;
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out;
 }
