--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -6,7 +6,7 @@
   }
 
 body {
-    overflow-x: hidden; 
+    overflow-x: hidden !important; 
     font-family: 'Work Sans' !important;
     width: 100% !important;
     max-width: 100% !important;
@@ -115,6 +115,10 @@ li {
     border-color: transparent !important;
     background: linear-gradient(0deg, #E15B11 0%, #EB9845 54%, #EF7D3F 100%);
     outline:0 !important;
+}
+
+.button-primary:hover { 
+
 }
 
 .button-primary.focus, .button-primary:focus {
