--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -80,6 +80,7 @@ font-size: 20px !important;
 .accordion {
     background-color: #fff !important;
     border-radius: 6px !important;
+    color: #141630;
 }
 
 .accordion-body {
