--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -113,6 +113,7 @@ li {
 
 .button-primary {
     font-size: 16px;
+    color: #FFFFFF !important;
     height: 39px;
     width: 156px;
     border-radius: 20px;
@@ -122,7 +123,10 @@ li {
 }
 
 .button-primary:hover { 
-
+    color: #FFFFFF !important;
+    border-radius: 20px;
+    border-color: transparent !important;
+    background: linear-gradient(0deg, #e66924 0%, #eba764 54%, #f69966 100%);
 }
 
 .button-primary.focus, .button-primary:focus {
@@ -245,3 +249,9 @@ li {
     box-shadow: none !important;
 }
 
+@media (max-width: 992px) { 
+#root {
+    position: absolute !important;
+}
+
+}
