--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 .copyright {
     line-height: 36px;
-    bottom: 0;
-    // width: 100%;
+    bottom: -15px;
     background-color: black;
     background-image: linear-gradient(to right, #141630 , #1F2350);
 }
