--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -21,7 +21,24 @@
 }
 
 .s-search {
-    width: 28px;
+    margin-top: .2rem;
+}
+
+.dropdown-toggle::after {
+    display: none !important;
+}
+
+.dropdown-transparent {
+    background-color: transparent !important;
+    border: 0px solid rgba(0, 0, 0, 0.15) !important;
+    border-radius: 0px !important;
+    width: 300px;
+}
+
+.form-control:focus {
+    color: #141630 !important;
+    border-color: #e3e3e3 !important;
+    box-shadow: none !important;
 }
 
 .navbar-mobile { 
