last styles added

--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -20,3 +20,8 @@
 .breadcrumb-item + .breadcrumb-item::before {
     color: #fff !important;
 }
+
+.breadcrumbs-home {
+    width: 25px;
+    margin-top: -3px !important;
+}
