--- a/src/components/PurchaseLessons/PurchaseLessons.scss
+++ b/src/components/PurchaseLessons/PurchaseLessons.scss
@@ -6,6 +6,13 @@
 
 .custom-card-styles {
      border: 0px transparent;
+     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.custom-card-styles:hover {
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 .snapshot-card-title {
